--- a/flaskr/templates/reportes/exportar.html
+++ b/flaskr/templates/reportes/exportar.html
@@ -51,7 +51,7 @@
       <button type="button" class="boton btn btn-primary btn-lg align-bottom " onclick="download_inf_red()">Información de Red</button>
       <button type="button" class="boton btn btn-primary btn-lg align-bottom " onclick="download_presupuestos()">Presupuestos</button>
       <button type="button" class="boton btn btn-primary btn-lg align-bottom " onclick="download_convenios()">Convenios</button>
-      <button type="button" class="boton btn btn-primary btn-lg align-bottom ">Item4</button>
+      <button type="button" class="boton btn btn-primary btn-lg align-bottom " onclick="download_info_webpo()">Datos WebPo</button>
   
     </ul>
 
@@ -70,6 +70,11 @@
       function download_convenios() {
         location.replace('/download_convenios');
       }
+
+      function download_info_webpo() {
+        location.replace('/download_info_webpo');
+      }
+
 
     </script>
 
